# ai-summary

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: competitive-analysis.md
hooks/: postbash.sh  postwebfetch.sh  postwebsearch.sh  prebash.sh  prewebfetch.sh  prewebsearch.sh
prompts/: claude-code.md  install.sh
site/: index.html  install.sh  llms-full.txt  llms.txt  robots.txt  style.css
src/: bench.rs  cache.rs  commands.rs  compress.rs  config.rs  crawl.rs  fetch.rs  fetch_utils.rs  init.rs  llm.rs  main.rs  search.rs  stats.rs  stats_history.rs  types.rs  wrap.rs
tests/: cli.rs
