[package]
name = "ai-summary"
version = "2.9.0"
edition = "2021"
description = "Web search with local LLM summarization — token saver for Claude Code"
license = "MIT"
repository = "https://github.com/agent-tools-org/ai-summary"
authors = ["sunoj"]
keywords = ["ai", "llm", "search", "summarization", "claude"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
scraper = "0.22"
readability = { version = "0.3", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
